--- a/project/package.json
+++ b/project/package.json
@@ -13,6 +13,8 @@
     "express": "~4.13.4",
     "express-partials": "^0.3.0",
     "morgan": "~1.7.0",
+    "mysql": "^2.11.1",
+    "sequelize": "^3.24.6",
     "serve-favicon": "~2.3.0"
   }
 }
